# IW-1

./: .gitignore  CMakeLists.txt
.github/workflows/: .actions.yml  actions.yml
code_coverage/: Code_Covr.cmake
code_coverage/googletest/googlemock/scripts/generator/: gmock_gen
code_coverage/googletest/googletest/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
code_coverage/googletest/googletest/cmake/: internal_utils.cmake
code_covr_gcovr_html/: index.gtests_gtests.cpp.html  index.html  index.project_src_start_program.c.html  index.project_src_utils.c.html
gtests/: gtests.cpp
project/include/: start_program.h  utils.h
project/src/: main.c  start_program.c  test.c  utils.c
